--- a/backend2/App.config
+++ b/backend2/App.config
@@ -1,5 +1,50 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BindingServerService" receiveTimeout="01:00:00" sendTimeout="01:00:00" maxBufferSize="2000000000" maxReceivedMessageSize="2000000000">
+          <readerQuotas maxDepth="2000000000" maxStringContentLength="2000000000" maxArrayLength="2000000000" maxBytesPerRead="2000000000" maxNameTableCharCount="2000000000" />
+          <!-- <reliableSession enabled="true" /> -->
+          <!-- 1 -->
+          <security mode="Transport">
+            <transport clientCredentialType="None" />
+          </security>
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <services>
+      <service name="Server.ServerService" behaviorConfiguration="BehaviorServerService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="BindingServerService" contract="Server.IServerService" />
+      </service>
+    </services>
+    <!--For debugging purposes set the includeExceptionDetailInFaults  
+   attribute to true-->
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="BehaviorServerService">
+          <serviceMetadata httpGetEnabled="True" />
+          <!-- <serviceMetadata httpsGetEnabled="True" /> -->
+          <serviceDebug includeExceptionDetailInFaults="True" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+  </system.serviceModel>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
