--- a/backend2/App.config
+++ b/backend2/App.config
@@ -4,7 +4,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BindingServerService" receiveTimeout="01:00:00" sendTimeout="01:00:00" maxBufferSize="2000000000" maxReceivedMessageSize="2000000000">
+        <binding name="BindingUsersManagementService" receiveTimeout="01:00:00" sendTimeout="01:00:00" maxBufferSize="2000000000" maxReceivedMessageSize="2000000000">
           <readerQuotas maxDepth="2000000000" maxStringContentLength="2000000000" maxArrayLength="2000000000" maxBytesPerRead="2000000000" maxNameTableCharCount="2000000000" />
           <!-- <reliableSession enabled="true" /> -->
           <!-- 1 -->
@@ -15,15 +15,15 @@
       </basicHttpBinding>
     </bindings>
     <services>
-      <service name="Server.ServerService" behaviorConfiguration="BehaviorServerService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="BindingServerService" contract="Server.IServerService" />
+      <service name="Server.UsersManagementService" behaviorConfiguration="BehaviorUsersManagementService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="BindingUsersManagementService" contract="Server.IUsersManagementService" />
       </service>
     </services>
     <!--For debugging purposes set the includeExceptionDetailInFaults  
    attribute to true-->
     <behaviors>
       <serviceBehaviors>
-        <behavior name="BehaviorServerService">
+        <behavior name="BehaviorUsersManagementService">
           <serviceMetadata httpGetEnabled="True" />
           <!-- <serviceMetadata httpsGetEnabled="True" /> -->
           <serviceDebug includeExceptionDetailInFaults="True" />
