--- a/backend2/backend2.csproj
+++ b/backend2/backend2.csproj
@@ -71,11 +71,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IServerService.cs" />
+    <Compile Include="IUsersManagementService.cs" />
     <Compile Include="Model1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerService.cs" />
+    <Compile Include="UsersManagementService.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
