fix configSections in app.config

--- a/backend2/App.config
+++ b/backend2/App.config
@@ -1,11 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework"
+             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+             requirePermission="false" />
+  </configSections>
+
 
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BindingUsersManagementService" receiveTimeout="01:00:00" sendTimeout="01:00:00" maxBufferSize="2000000000" maxReceivedMessageSize="2000000000">
-          <readerQuotas maxDepth="2000000000" maxStringContentLength="2000000000" maxArrayLength="2000000000" maxBytesPerRead="2000000000" maxNameTableCharCount="2000000000" />
+        <binding name="BindingUsersManagementService" receiveTimeout="01:00:00" sendTimeout="01:00:00"
+                 maxBufferSize="2000000000" maxReceivedMessageSize="2000000000">
+          <readerQuotas maxDepth="2000000000" maxStringContentLength="2000000000" maxArrayLength="2000000000"
+                        maxBytesPerRead="2000000000" maxNameTableCharCount="2000000000" />
           <!-- <reliableSession enabled="true" /> -->
           <!-- 1 -->
           <security mode="Transport">
@@ -16,7 +25,8 @@
     </bindings>
     <services>
       <service name="Server.UsersManagementService" behaviorConfiguration="BehaviorUsersManagementService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="BindingUsersManagementService" contract="Server.IUsersManagementService" />
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="BindingUsersManagementService"
+                  contract="Server.IUsersManagementService" />
       </service>
     </services>
     <!--For debugging purposes set the includeExceptionDetailInFaults  
@@ -45,10 +55,7 @@
 
 
 
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
@@ -78,8 +85,10 @@
   <entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
+      <provider invariantName="System.Data.SqlClient"
+                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="MySql.Data.MySqlClient"
+                type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
     <!-- <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/> -->
 
     <!-- <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/> -->
@@ -88,10 +97,13 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="mysql" connectionString="Server=192.168.88.240,3306;Host=192.168.88.240;Port=3306;Database=bb_ef;Uid=bb_ef;Pwd=FGCvKVdiYYCs5AM8;" providerName="MySql.Data.MySqlClient" />
-  <add name="Model1" connectionString="Server=192.168.88.240,3306;Host=192.168.88.240;Port=3306;Database=bb_ef;Uid=bb_ef;Pwd=FGCvKVdiYYCs5AM8;" providerName="System.Data.SqlClient" />
+    <add name="mysql"
+         connectionString="Server=192.168.88.240,3306;Host=192.168.88.240;Port=3306;Database=bb_ef;Uid=bb_ef;Pwd=FGCvKVdiYYCs5AM8;"
+         providerName="MySql.Data.MySqlClient" />
+    <add name="Model1"
+         connectionString="Server=192.168.88.240,3306;Host=192.168.88.240;Port=3306;Database=bb_ef;Uid=bb_ef;Pwd=FGCvKVdiYYCs5AM8;"
+         providerName="System.Data.SqlClient" />
   
-<!-- <connectionStrings><add name="bb_efEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=pi.local;user id=bb_ef;password=FGCvKVdiYYCs5AM8;persistsecurityinfo=True;database=bb_ef&quot;" providerName="System.Data.EntityClient" /> -->
   </connectionStrings>
   <!-- <runtime> -->
   <!--   <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> -->
