tryed to enable metadata access. Not affected to project

--- a/backend2/App.config
+++ b/backend2/App.config
@@ -7,6 +7,10 @@
              requirePermission="false" />
   </configSections>
 
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+
 
   <system.serviceModel>
     <bindings>
@@ -24,17 +28,34 @@
       </basicHttpBinding>
     </bindings>
     <services>
-      <service name="Server.UsersManagementService" behaviorConfiguration="BehaviorUsersManagementService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="BindingUsersManagementService"
+ 
+
+      <!-- ~1~ Original: @1@ -->
+      <!-- <service name="Server.UsersManagementService" behaviorConfiguration="BehaviorUsersManagementService"> -->
+      <!--   <endpoint address="" binding="basicHttpBinding" bindingConfiguration="BindingUsersManagementService" -->
+      <!--             contract="Server.IUsersManagementService" /> -->
+      <!--   <endpoint contract="IMetadataExchange" binding="mexHttpBinding" address="/mex" /> -->
+      <!-- </service> -->
+
+      <service behaviorConfiguration="MetadataBehavior" name="Server.UsersManagementService">
+        <endpoint address=""
+                  binding="basicHttpBinding"
                   contract="Server.IUsersManagementService" />
+        <endpoint address="mex"
+                  binding="mexHttpBinding"
+                  contract="IMetadataExchange" />
       </service>
+
     </services>
     <!--For debugging purposes set the includeExceptionDetailInFaults  
    attribute to true-->
     <behaviors>
       <serviceBehaviors>
+        <behavior name="MetadataBehavior">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+        </behavior>
         <behavior name="BehaviorUsersManagementService">
-          <serviceMetadata httpGetEnabled="True" />
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="true"/>
           <!-- <serviceMetadata httpsGetEnabled="True" /> -->
           <serviceDebug includeExceptionDetailInFaults="True" />
         </behavior>
@@ -55,33 +76,6 @@
 
 
 
-
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-  </startup>
-
-
-
-  <!-- <entityFramework> -->
-  <!--   <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/> -->
-  <!--   ~1~ <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/> @1@ -->
-  <!--   ~1~ <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework"> @1@ -->
-  <!--   ~1~   <parameters> @1@ -->
-  <!--   ~1~     <parameter value="mssqllocaldb" /> @1@ -->
-  <!--   ~1~   </parameters> @1@ -->
-  <!--   ~1~ </defaultConnectionFactory> @1@ -->
-  <!--   <providers> -->
-  <!--     ~1~ <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" /> @1@ -->
-  <!--   ~1~ <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"> @1@ -->
-  <!--     <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" /> -->
-  <!-- -->
-  <!--   ~1~ </provider> @1@ -->
-  <!--    -->
-  <!--   </providers> -->
-  <!-- </entityFramework> -->
-
-
-
   <entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -89,13 +83,8 @@
                 type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="MySql.Data.MySqlClient"
                 type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
-    <!-- <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/> -->
-
-    <!-- <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/> -->
-
     </providers>
   </entityFramework>
-
   <connectionStrings>
     <add name="mysql"
          connectionString="Server=192.168.88.240,3306;Host=192.168.88.240;Port=3306;Database=bb_ef;Uid=bb_ef;Pwd=FGCvKVdiYYCs5AM8;"
@@ -103,14 +92,5 @@
     <add name="Model1"
          connectionString="Server=192.168.88.240,3306;Host=192.168.88.240;Port=3306;Database=bb_ef;Uid=bb_ef;Pwd=FGCvKVdiYYCs5AM8;"
          providerName="System.Data.SqlClient" />
-  
   </connectionStrings>
-  <!-- <runtime> -->
-  <!--   <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> -->
-  <!--     <dependentAssembly> -->
-  <!--       <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" /> -->
-  <!--       <bindingRedirect oldVersion="0.0.0.0-8.0.12.0" newVersion="8.0.12.0" /> -->
-  <!--     </dependentAssembly> -->
-  <!--   </assemblyBinding> -->
-  <!-- </runtime> -->
 </configuration>
