--- a/web_client/Web.config
+++ b/web_client/Web.config
@@ -75,4 +75,20 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_IUsersManagementService" />
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8000/metadata" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_IUsersManagementService"
+        contract="UserService.IUsersManagementService" name="WSHttpBinding_IUsersManagementService">
+        <identity>
+          <userPrincipalName value="ns-lm\gogasan" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
