service link added

--- a/web_client/Web.config
+++ b/web_client/Web.config
@@ -79,12 +79,20 @@
     <bindings>
       <wsHttpBinding>
         <binding name="WSHttpBinding_IUsersManagementService" />
+        <binding name="WSHttpBinding_IUsersManagementService1" />
       </wsHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://localhost:8000/metadata" binding="wsHttpBinding"
         bindingConfiguration="WSHttpBinding_IUsersManagementService"
         contract="UserService.IUsersManagementService" name="WSHttpBinding_IUsersManagementService">
+        <identity>
+          <userPrincipalName value="ns-lm\gogasan" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:8000/metadata" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_IUsersManagementService1"
+        contract="ServiceReference.IUsersManagementService" name="WSHttpBinding_IUsersManagementService1">
         <identity>
           <userPrincipalName value="ns-lm\gogasan" />
         </identity>
