stable wcf connect

--- a/web_client/Web.config
+++ b/web_client/Web.config
@@ -90,8 +90,8 @@
           <userPrincipalName value="ns-lm\gogasan" />
         </identity>
       </endpoint>
-      <endpoint address="http://localhost:8000/metadata" binding="wsHttpBinding"
-        bindingConfiguration="WSHttpBinding_IUsersManagementService1"
+      <endpoint address="http://localhost:8000/UsersManagementService"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUsersManagementService1"
         contract="ServiceReference.IUsersManagementService" name="WSHttpBinding_IUsersManagementService1">
         <identity>
           <userPrincipalName value="ns-lm\gogasan" />
