debugging known types

--- a/backend2/App.config
+++ b/backend2/App.config
@@ -6,11 +6,25 @@
              type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
              requirePermission="false" />
   </configSections>
-
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-
+<system.diagnostics>
+  <sources>
+    <source name="System.ServiceModel"
+            switchValue="Information, ActivityTracing"
+            propagateActivity="true">
+      <listeners>
+        <add name="traceListener"
+            type="System.Diagnostics.XmlWriterTraceListener"
+            initializeData="c:\logs\Traces.svclog"  />
+      </listeners>
+    </source>
+  </sources>
+</system.diagnostics>
+  
+  
+  
 
   <system.serviceModel>
     <bindings>
