--- a/web_client/web_client.csproj
+++ b/web_client/web_client.csproj
@@ -199,12 +199,7 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Properties\DataSources\backend2.Returnable.datasource" />
-    <None Include="Connected Services\ServiceReference\UsersManagementService4.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <Content Include="Connected Services\ServiceReference\web_client.ServiceReference.Returnable.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Content>
+    <Content Include="Properties\DataSources\ClassLibrary1.Returnable.datasource" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
