--- a/ClassLibrary1/ClassLibrary1.csproj
+++ b/ClassLibrary1/ClassLibrary1.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IUsersManagementService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ClassLib.cs" />
   </ItemGroup>
