--- a/ClassLibrary1/ClassLibrary1.csproj
+++ b/ClassLibrary1/ClassLibrary1.csproj
@@ -54,8 +54,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IUsersManagementService.cs" />
+    <Compile Include="Model1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ClassLib.cs" />
+    <Compile Include="UsersManagementService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
