Solve all TODO cases

--- a/backend2/App.config
+++ b/backend2/App.config
@@ -9,11 +9,14 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+
+
 <system.diagnostics>
   <sources>
     <source name="System.ServiceModel"
-            switchValue="Information, ActivityTracing"
-            propagateActivity="true">
+            switchValue = "Information, ActivityTracing"
+            >
+      <!-- propagateActivity="true" -->
       <listeners>
         <add name="traceListener"
             type="System.Diagnostics.XmlWriterTraceListener"
@@ -101,10 +104,10 @@
   </entityFramework>
   <connectionStrings>
     <add name="mysql"
-         connectionString="Server=192.168.88.240,3306;Host=192.168.88.240;Port=3306;Database=bb_ef;Uid=bb_ef;Pwd=FGCvKVdiYYCs5AM8;"
+         connectionString="Server=pi.local,3306;Host=pi.local;Port=3306;Database=bb_ef;Uid=bb_ef;Pwd=FGCvKVdiYYCs5AM8;"
          providerName="MySql.Data.MySqlClient" />
     <add name="Model1"
-         connectionString="Server=192.168.88.240,3306;Host=192.168.88.240;Port=3306;Database=bb_ef;Uid=bb_ef;Pwd=FGCvKVdiYYCs5AM8;"
+         connectionString="Server=pi.local,3306;Host=pi.local;Port=3306;Database=bb_ef;Uid=bb_ef;Pwd=FGCvKVdiYYCs5AM8;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
